single left side bardone

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
     margin-top: 50px;
     margin-bottom: 90px;
 }
+.ImageResponsive{
+   width: 100%;
+}
 .dfadfad{
    
    justify-content: space-between;
